@@ -8,6 +8,8 @@ Unmerdify alpha support (by Vincent Jousse):
 - "info" now explain how the content was cleaned
 Imortant changes:
 - Default image size now 100 instead of 40 (can be restored with "set images_size 40")
+Features:
+- new "websearch" command wich default to wiby.me
 Others:
 - In "lists", only consider files ending with .gmi (bug #46 by woffs)
 - support for new links color in gopher (by JMCS)
